# Canvas-Wechat

./: .env.example  .gitignore  Dockerfile  Instructure_Developer_Docs_技术文档.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: config.py  main.py
app/auth/: bind_flow.py  canvas_oauth.py  user_repo.py
app/chat/: __init__.py
app/db/: redis.py  session.py
app/ilink/: client.py  context_token.py  message_handler.py  poller.py  schemas.py
app/middleware/: error_handler.py
app/models/: __init__.py  announcement.py  assignment.py  base.py  conversation_history.py  course.py  document_chunk.py  enrollment.py  notification_log.py  pending_notification.py  submission.py  user_mapping.py
app/notifications/: checker.py  dispatcher.py  formatter.py  rate_limiter.py  tasks.py
app/sync/: canvas_client.py  celery_app.py  delta_detector.py  sync_announcements.py  sync_assignments.py  sync_enrollments.py  sync_grades.py  tasks.py
docs/: distribution-channels-research.md
scripts/: setup_check.py
tests/: conftest.py  test_config.py  test_notification_formatter.py
